Quorum3/Library/Tests/TypeCheckerGenerated/Pass/ImpAssignTextText.quorum
class Main
    action Main
        text v = text
        Test(v)
    end

    action Test(text var)
        if var = text
            output "passed"
        end
    end
end
