Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBoolObjText.quorum
class Main
    action Main
        text v = "text"
        Test(v)
    end

    action Test(Boolean var)
    end
end
